# ditto-subnet

./: .dockerignore  .env.example  .gitignore  .tool-versions  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dittobench-api  Dockerfile.sandbox-docker  Dockerfile.stack-release  LICENSE  MINER.md  Makefile  PROJECT.md  README.md  VALIDATOR.md  VALIDATOR_FAQ.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
.agents/skills/github/: SKILL.md
.depot/workflows/: ci.yml  conventional-pr.yml  release.yml
.github/workflows/: ci.yml  conventional-pr.yml  deploy-screener.yml  migrate-secrets-to-depot-ci-1784883475258.yml  release.yml  release.yml.disabled
alembic/: env.py
alembic/versions/: 2026_05_19_initial_schema.py  2026_06_09_drop_unused_agents_ip_address.py
ditto/: __init__.py  system_health.py
ditto/api_models/: __init__.py  agent_status.py  benchmark_capacity.py  benchmark_progress.py  health.py  inference.py  retrieval.py  screener.py  stack_health.py  system_health.py  upload.py  validator.py  validator_capabilities.py
ditto/api_server/: __init__.py  __main__.py  config.py  dependencies.py  errors.py  factory.py  logging_config.py
ditto/api_server/endpoints/: __init__.py  health.py  metrics.py  retrieval.py  upload.py
ditto/api_server/middleware/: __init__.py  auth_pass_through.py  error_envelope.py  request_id.py
ditto/api_server/payment_verifier/: __init__.py  errors.py  factory.py  models.py  verifier.py
ditto/api_server/pricing/: __init__.py  config.py  errors.py  factory.py  oracle.py
ditto/api_server/storage/: __init__.py  client.py  errors.py  factory.py  models.py
ditto/bench/: __init__.py
ditto/bench/docs/: README.md  anti_gaming.md  coverage_matrix.md  harness_interface.md  protocol.md  scoring.md
ditto/bench/fixtures/: README.md
ditto/bench/loader/: __init__.py  cases.py  taxonomy.py
ditto/bench/runner/: __init__.py  __main__.py  _parity_smoke.py  antigaming.py  docker.py  report.py  run.py  scoring.py
ditto/bench/schemas/: challenge_request.schema.json  miner_response.schema.json  score.schema.json
ditto/chain/: __init__.py  client.py  errors.py  factory.py  models.py
ditto/db/: __init__.py  config.py  connection.py  errors.py  factory.py  models.py  pool.py
ditto/db/queries/: __init__.py  agents.py  payments.py
ditto/miner_cli/: __init__.py  __main__.py  api_client.py  confirm.py  errors.py  factory.py  models.py  network.py  payment.py  preferences.py  signing.py  tar_validator.py  wallet.py
ditto/miner_cli/commands/: __init__.py  status.py  upload.py  verify.py
ditto/screener/: __init__.py  __main__.py  config.py  errors.py  gate.py  model_canary.py  platform.py  signing.py  worker.py
ditto/tests/: __init__.py  test_compose_stack.py  test_netns_incompatible.py  test_release_workflow.py  test_system_health.py  test_validator_auto_update.py  test_validator_compose.py  test_validator_stack_auto_update.py
ditto/tests/api_models/: test_benchmark_capacity.py  test_benchmark_progress.py  test_retrieval.py  test_stack_health.py  test_upload.py  test_validator_capabilities.py  test_wire_roundtrip.py
ditto/tests/api_server/: conftest.py  test_config.py  test_errors.py  test_factory.py  test_logging_config.py  test_main.py  test_middleware.py
ditto/tests/bench/: __init__.py  test_antigaming.py  test_loader_cases.py  test_runner_smoke.py  test_scoring_core.py  test_scoring_retrieval.py  test_taxonomy.py
ditto/tests/chain/: __init__.py  conftest.py  test_client.py  test_errors.py  test_models.py
ditto/tests/contract/: _schema.py  screener_contract.json  screener_heartbeat_contract.json  test_screener_contract.py  test_screener_heartbeat_contract.py  test_screening_protocol_package.py  test_validator_contract.py  validator_contract.json  validator_heartbeat_v7.json  validator_heartbeat_v8.json  validator_heartbeat_v9.json
ditto/tests/db/: conftest.py  test_config.py  test_connection.py  test_errors.py  test_factory.py  test_models.py  test_pool.py
ditto/tests/integration/: test_api_health.py  test_miner_cli_integration.py  test_retrieval_integration.py  test_upload_agent_integration.py  test_upload_pricing_integration.py
ditto/tests/miner_cli/: conftest.py  test_api_client.py  test_confirm.py  test_factory.py  test_main.py  test_models.py  test_network.py  (+5 more)
ditto/validator/: __init__.py  __main__.py  build_info.py  config.py  crn.py  dittobench.py  errors.py  onchain_seed.py  platform.py  sdk_weights.py  signing.py  stack_health.py  stack_identity.py  telemetry.py  transform_audit.py  update_control.py  weights.py  worker.py
docs/: BENCHMARK-V2.md  BENCHMARK-V3-IDEAS.md  CREDENTIALED-HANDOFF.md  FULL-STACK-UPDATES.md  MINER-FAQ.md  MINER.md  NEXT-STEPS.md  PRODUCTION-HANDOFF.md  ROAD-TO-PRODUCTION.md  RUNNING-A-VALIDATOR.md  SEMANTIC-CLONE-PREVENTION.md  STATE-OF-THE-SUBNET.md  UNTRUSTED-EXECUTION-RUNBOOK.md  VALIDATOR-BRIEF.md  VALIDATOR-MODEL-HOSTING.md  VALIDATOR-ONBOARDING.md  VALIDATOR.md  dev-e2e-handoff.md  dev-mining-practice-runbook.md  ditto-architecture-v2.mmd  ditto-architecture.mmd  incentive-mechanism.md  prod-final-hardening-plan.md  scoring-scheduler-scope.md
go/: go.mod
go/bittensor/: aggregate.go  antigaming.go  antigaming_test.go  scoring.go  scoring_test.go  types.go
go/chain/: client.go  client_test.go  errors.go  models.go  pylon.go  substrate.go
harness/go-template/: .dockerignore  Dockerfile  README.md  go.mod
harness/go-template-baseline/: .dockerignore  BASELINE.md  Dockerfile  README.md  go.mod
scripts/: build-stack-release.py  check_netns_incompatible.py  gen_screener_contract.py  gen_screener_heartbeat_contract.py  gen_validator_contract.py  install-validator-auto-update.sh  install-validator-stack-auto-update.sh  render-baseline.sh  run-validator.sh  sandbox-docker-entrypoint.sh  smoke_pylon.py  start_validator.py  update-screener.sh  validator-auto-update.sh  validator-compose.sh  validator-stack-auto-update.sh  validator-stack-compose.sh  validator.env.example
scripts/pylon/: docker-compose.yaml  pylon.env.example
(+85 files in other folders)
