[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ditto"
version = "0.0.1"
description = "Ditto Bittensor Subnet 118 — Go-based agent memory harness incentive layer."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "heyDitto" }]
dependencies = [
    "bittensor>=10.2.1",
    "bittensor-pylon-client",
    "async-substrate-interface",
    "asyncpg>=0.30",
    "alembic>=1.13",
]

[tool.uv.sources]
bittensor-pylon-client = { git = "https://github.com/bittensor-church/bittensor-pylon", subdirectory = "pylon_client" }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["ditto"]

# ─── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["ditto"]

# ─── Mypy ────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ditto.tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# ─── Pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ditto/tests"]
markers = [
    "slow: long-running tests excluded by default",
    "integration: integration tests requiring real infra",
    "localnet: tests against a local Bittensor network",
    "e2e: end-to-end tests through the full stack",
]
addopts = ["-m", "not slow and not integration and not localnet and not e2e"]
